@@ -191,7 +191,6 @@ DSN: orcpt: NULL  flags: 0
 SMTP<< data
 SMTP>> 354 Enter message, ending with "." on a line by itself
 search_tidyup called
-host in ignore_fromline_hosts? no (option unset)
 >>Headers received:
 
 search_tidyup called
@@ -373,7 +372,6 @@ DSN: orcpt: NULL  flags: 0
 SMTP<< data
 SMTP>> 354 Enter message, ending with "." on a line by itself
 search_tidyup called
-host in ignore_fromline_hosts? no (option unset)
 >>Headers received:
 
 search_tidyup called
